# design-system_MCP

./: .gitignore  README.md  __init__.py  design_system_file_path_resources.py  pyproject.toml  storybook_async_fetcher.py  storybook_fetcher.py  storybook_prompts.py  storybook_resources.py  storybook_server.py  utils.py
client/: stdio_client.py  stdio_client_light.py
host/: host.py  host_with_single_client.py
server/: design_system_file_path_resources.py  storybook_async_fetcher.py  storybook_prompts.py  storybook_server.py
utils/: color.py  color_print.py
