[project]
name = "softreef"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "urllib3>=2.4.0",
]
